# parse_macho

./: .gitignore  CMakeLists.txt  README.md  main.c
endian/: endian.c  endian.h
macho/: macho.c  macho.h  macho64.c  macho64.h
